@@ -842,6 +842,8 @@
       <class name="test.configuration.github1625.TestRunnerIssue1625"/>
       <class name="test.configuration.issue1753.IssueTest"/>
       <class name="test.configuration.BeforeClassTest"/>
+      <class name="test.configuration.issue2209.IssueTest"/>
+      <class name="test.configuration.issue2254.IssueTest"/>
     </classes>
   </test>
 
